Refactor SQL queries to use prepared statements for improved security
## Changes
* Updated SQL queries in `OfflineBendingPlayer`, `StatisticsManager`, and `StatisticsMethods` to use prepared statements, enhancing security against SQL injection.
* Cleaned up unused imports in `GeneralMethods` and improved code readability.
* Refactored `TempBlock` to use `CopyOnWriteArrayList` for better thread safety in managing temporary blocks.
* Enhanced logging in `LogFormatter` by switching to `DateTimeFormatter` for date formatting.